feat(profile): expose career entries in the public profile